k8s/tests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telegraf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /telegraf
        pathType: Prefix
        backend:
          service:
            name: telegraf-influxdb-service
            port:
              number: 8086
